--- a/dist.ini
+++ b/dist.ini
@@ -22,3 +22,4 @@ twitter_hash_tags = #perl #cpan
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
+Path::ScanINC = 0.002 ; Win32 Quirks in @INC + &sub callbacks.
