--- a/dist.ini
+++ b/dist.ini
@@ -19,7 +19,7 @@ git_versions      = 1
 ; version_rel_hour  = 13
 ; version_rel_time_zone = Pacific/Auckland
 twitter_hash_tags = #perl #cpan
-; auto_prereqs_skip = File::Find
+auto_prereqs_skip = Whitelist
 
 [Prereqs]
 Path::ScanINC = 0.002 ; Win32 Quirks in @INC + &sub callbacks.
