Fix spurious ( in POD

--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -141,7 +141,7 @@ spell_command = aspell list --lang en_US
 
 [Documentation::ProhibitParagraphTwoDots]
 
-[-Documentation::ProhibitUnbalancedParens]
+[Documentation::ProhibitUnbalancedParens]
 
 [Documentation::ProhibitVerbatimMarkup]
 
