--- a/perlcritic.rc
+++ b/perlcritic.rc
@@ -424,7 +424,7 @@ base_max = 130
 
 [ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
 
-[-ValuesAndExpressions::RestrictLongStrings]
+[ValuesAndExpressions::RestrictLongStrings]
 
 [ValuesAndExpressions::UnexpandedSpecialLiteral]
 
